# filtered-vector-search-demo

./: .gitignore  Makefile  PIPELINE.md  README.md  dvc.yaml  pyproject.toml
data/: .gitignore
data/raw/: .gitignore  dataset.parquet.dvc  embeds_limit-0_chunk_split.cloudpickle.dvc  sentences-limit-0.parquet.dvc
docs/: Makefile  conf.py  index.rst  make.bat
src/api/: main.py
src/api/static/: index.html
src/api/static/css/: custom.css
src/data/: init_qdrant_collection.py
