[tool.poetry]
name = "filtered-vector-search-demo"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.22.0"
sentence-transformers = "^2.6.0"
polars = "^0.20.16"


[tool.poetry.group.dev.dependencies]
dvc = "^3.48.4"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
